@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.26+nptl
+Release: 0.28nptl
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -33,15 +33,16 @@ BuildRequires: elfutils-devel >= 0.63
 
 %if !%{with_internal_db}
 BuildRequires: db3-devel
+%endif
 
-# XXX glibc-2.1.92 has incompatible locale changes that affect statically
-# XXX linked binaries like /bin/rpm.
-%ifnarch ia64
-Requires: glibc >= 2.1.92
-%endif
-%endif
+# XXX /dev/futex support needed:
+Requires: kernel >= 2.4.20-0.pp.9
+
+# XXX NPTL support needed.
+Requires: glibc >= 2.3.1-16nptl
 
 BuildRequires: zlib-devel
+
 # XXX Red Hat 5.2 has not bzip2 or python
 %if %{with_bzip2}
 BuildRequires: bzip2 >= 0.9.0c-2
@@ -460,7 +461,13 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
-* Sun Dec 15 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.26
+* Tue Dec 17 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.28nptl
+- re-enable CDB locking, removing "private" from %%__dbi_cdb macro.
+
+* Mon Dec 16 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.27+nptl
+- rebuild against glibc with fcntl fixed in libpthread.
+
+* Sun Dec 15 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.26+nptl
 - disable fcntl(2) lock on Packages until glibc+nptl is fixed.
 - make cdb locks "private" for pthreads compatibility w/o NPTL.
 - add --enable-posixmutexes to use NPTL.
